fix(notification): 收敛聚合读取并防止重复递减未读